--- a/lang/en.json
+++ b/lang/en.json
@@ -1,30 +1,30 @@
 {
-    "update": "🔄 | **Updating...**",
-    "restart": "✅ | **Restarted!**",
-    "downloading": "🔄 | **Processing...**",
-    "errorMessage": "❌ | **An Error Occurred!**",
-    "notAllowed": "❌ | **You're Not Allowed!**",
-    "invalidFile": "❌ | **Invalid Command/File!**",
-    "langSet": "🗣 | **Language Set To `%s`!**",
-    "loopMode": "🔂 | **Loop Mode %s!**",
-    "adminsOnly": "👮 | **Admins Only Mode %s!**",
-    "audioMode": "🎧 | **Audio Mode Enabled!**",
-    "videoMode": "🎥 | **Video Mode Enabled!**",
-    "notFound": "❌ | **Noting Found, Try Again!**",
-    "notActive": "❌ | **No Active Group Call!**",
-    "notPlaying": "❌ | **Nothing Is Playing!**",
-    "spotifyNotEnabled": "❌ | **Spotify Is Not Enabled!**",
-    "playing": "▶️ **[%s](%s)**\n⏱ **Duration:** `%s`\n💬 **Playing On:** `%s`\n🎧 **Requested By:** %s",
-    "paused": "⏸ | **Paused Stream!**",
-    "resumed": "▶️ | **Resumed Stream!**",
-    "muted": "🔇 | **Muted Stream!**",
-    "unmuted": "🔈 | **Unmuted Stream!**",
+    "update": "🔄 | **Actualizando...**",
+    "restart": "✅ | **Reiniciando!**",
+    "downloading": "🔄 | **Procesando...**",
+    "errorMessage": "❌ | **Ha Ocurrido Un Error!**",
+    "notAllowed": "❌ | **Tu no tienes permiso!**",
+    "invalidFile": "❌ | **Commando/Archivo Invalido!**",
+    "langSet": "🗣 | **Idioma Establecido A `%s`!**",
+    "loopMode": "🔂 | **Modo Cíclico %s!**",
+    "adminsOnly": "👮 | **Modo Solo Para Admins %s!**",
+    "audioMode": "🎧 | **Modo Audio Encendido!**",
+    "videoMode": "🎥 | **Modo Video Encendido!**",
+    "notFound": "❌ | **Nada Encontrado, Intentalo De Nuevo !**",
+    "notActive": "❌ | **Video Llamada no Activa!**",
+    "notPlaying": "❌ | **Nada Está Sonando !**",
+    "spotifyNotEnabled": "❌ | **Spotify No esta Activado!**",
+    "playing": "▶️ **[%s](%s)**\n⏱ **Duración:** `%s`\n💬 **Escuchando Desde:** `%s`\n🎧 **Petición Por:** %s",
+    "paused": "⏸ | **Stream Pausado!**",
+    "resumed": "▶️ | ** Resumiendo Stream !**",
+    "muted": "🔇 | **Stream Muteado!**",
+    "unmuted": "🔈 | **Stream Desmuteado**",
     "leaveVC": "⏹ | **Left From Video Chat!**",
-    "queueEmpty": "⏺ | **Queue Is Empty!**",
-    "queueExported": "✅ | **%d Songs Exported!**",
-    "queueImported": "✅ | **%d Songs Imported!**",
-    "replyToAFile": "👀 | **Reply To An Audio/Video!**",
-    "addedToQueue": "➕ | **[%s](%s) Is Queued In Position %d**!",
-    "startText": "👋🏻 **Hello %s**,\n\nThis is Telegram **Music Player**\nI Can Stream **Lives**, **Radios**, **YouTube Videos**, Telegram **Audio & Video Files** On Voice Chat Of Telegram Groups. Let's Enjoy The **Cinematic View** Of Music Player With Your Friends 😉!\n\n**Made With ❤️ By @ImSafone!** 👑",
-    "helpText": "🤖 **Available Commands:**\n\n• <prefix>ping\nUsage: `check if alive or not`\n\n• <prefix>repo\nUsage: `show the bot source code`\n\n• <prefix>start | <prefix>help\nUsage: `show the help for commands`\n\n• <prefix>mode | <prefix>switch\nUsage: `switch the stream mode (audio/video)`\n\n• <prefix>p | <prefix>play [song name | youtube link]\nUsage: `play a song in vc, if already playing add to queue`\n\n• <prefix>radio | <prefix>stream [radio url | stream link]\nUsage: `play a live stream in vc, if already playing add to queue`\n\n• <prefix>pl | <prefix>playlist [youtube playlist link]\nUsage: `play the whole youtube playlist at once`\n\n• <prefix>skip | <prefix>next\nUsage: `skip to the next song`\n\n• <prefix>m | <prefix>mute\nUsage: `mute the current stream`\n\n• <prefix>um | <prefix>unmute\nUsage: `unmute the muted stream`\n\n• <prefix>ps | <prefix>pause\nUsage: `pause the current stream`\n\n• <prefix>rs | <prefix>resume\nUsage: `resume the paused stream`\n\n• <prefix>list | <prefix>queue\nUsage: `show the songs in the queue`\n\n• <prefix>mix | <prefix>shuffle\nUsage: `shuffle the queued playlist`\n\n• <prefix>loop | <prefix>repeat\nUsage: `enable or disable the loop mode`\n\n• <prefix>lang | language [language code]\nUsage: `set the bot language in a group`\n\n• <prefix>ip | <prefix>import\nUsage: `import queue from exported file`\n\n• <prefix>ep | <prefix>export\nUsage: `export the queue for import in future`\n\n• <prefix>stop | <prefix>leave\nUsage: `leave from vc and clear the queue`\n\n• <prefix>restart | <prefix>update\nUsage: `restart and update your music player`\n\n© **Powered By: @AsmSafone | @AsmSupport**"
+    "queueEmpty": "⏺ | **Nada en Cola!**",
+    "queueExported": "✅ | **%d Canciones Exportada!**",
+    "queueImported": "✅ | **%d Canciones Importadas!**",
+    "replyToAFile": "👀 | **Responde A Un Audio/Video!**",
+    "addedToQueue": "➕ | **[%s](%s)Está En Cola, En Posición %d**!",
+    "startText": "👋🏻 **Hola %s**,\n\nEsto es Para Telegram **Music Player**\nI Puede hacer stream de **Lives**, **Radios**, **YouTube Videos**, Telegram **Audio & Archivos de Video** En el Chat de Voz de Telegram. Disfruten de **Music Player** Junto a sus amigos😉!\n\n**Con ❤️ Por Rouse✨** ",
+    "helpText": "🤖 **Comandos Disponibles:**\n\n• <prefix>ping\nUsage: `check if alive or not`\n\n• <prefix>repo\nUsage: `show the bot source code`\n\n• <prefix>start | <prefix>help\nUsage: `Muestra la ayuda de Comandos`\n\n• <prefix>mode | <prefix>switch\nUsage: `Canbia el modo stream (audio/video)`\n\n• <prefix>p | <prefix>play [song name | youtube link]\nUsage: `Reproduce una canción en vc, si ya está reproduciendose, se agregara a la cola`\n\n• <prefix>radio | <prefix>stream [radio url | stream link]\nUsage: `Reproduce un live stream en vc, if already playing add to queue`\n\n• <prefix>pl | <prefix>playlist [youtube playlist link]\nUsage: `play the whole youtube playlist at once`\n\n• <prefix>skip | <prefix>next\nUsage: `skip to the next song`\n\n• <prefix>m | <prefix>mute\nUsage: `mute the current stream`\n\n• <prefix>um | <prefix>unmute\nUsage: `unmute the muted stream`\n\n• <prefix>ps | <prefix>pause\nUsage: `pause the current stream`\n\n• <prefix>rs | <prefix>resume\nUsage: `resume the paused stream`\n\n• <prefix>list | <prefix>queue\nUsage: `show the songs in the queue`\n\n• <prefix>mix | <prefix>shuffle\nUsage: `shuffle the queued playlist`\n\n• <prefix>loop | <prefix>repeat\nUsage: `enable or disable the loop mode`\n\n• <prefix>lang | language [language code]\nUsage: `set the bot language in a group`\n\n• <prefix>ip | <prefix>import\nUsage: `import queue from exported file`\n\n• <prefix>ep | <prefix>export\nUsage: `export the queue for import in future`\n\n• <prefix>stop | <prefix>leave\nUsage: `leave from vc and clear the queue`\n\n• <prefix>restart | <prefix>update\nUsage: `restart and update your music player`\n\n© **Powered By: AsmSafone | AsmSupport**"
 }
